Fixing the text align

--- a/CSS/Style2.css
+++ b/CSS/Style2.css
@@ -107,7 +107,7 @@ body {
     color:#fff;
     font-size: 75px;
     position: absolute;
-    top: 30%;
+    top: 40%;
     transform: translateY(-40%);
     text-align: left;
     padding-left: 5%;
